# RIN_loading

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT_PROTOCOL.md  FEATURE_ANALYSIS.md  PROJECT_CHARTER.md  PROJECT_FILE_ANALYSIS.md  README.md  Start_RIN.command  Start_RIN_Local_Model.command  Start_RIN_Python.command  Start_RIN_Python_Local_Model.command  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  打开RIN项目.command
docs/: ACTION_PERMISSION_POLICY.md  BACKUP_MIGRATION_POLICY.md  CONSOLE_OPERATIONS_POLICY.md  EXTERNAL_MODEL_HANDOFF.md  HYBRID_RETRIEVAL_INTEGRATION_PLAN.md  LOCAL_EMBEDDING_PROVIDER_PLAN.md  LOCAL_LAUNCHER.md  LOCAL_PLANNER_POLICY.md  MEMORY_MAINTENANCE_POLICY.md  MEMORY_METADATA_PROPOSAL.md  MEMORY_RETRIEVAL_EVALUATION_PLAN.md  MEMORY_RETRIEVAL_RANKING.md  PROJECT_MAP.md  REPORT_ONLY_ACCEPTED_MEMORY_INDEX_PLAN.md  RIN_V0_1_OPERATIONS_GUIDE.md  RIN_V0_1_PRIVACY_AUDIT.md  RIN_V0_1_READINESS_CHECKLIST.md  RIN_V0_1_RELEASE_NOTES.md  RIN_V0_2_OPERATIONS_GUIDE.md  RIN_V0_2_PRIVACY_AUDIT.md  RIN_V0_2_READINESS_CHECKLIST.md  RIN_V0_2_RELEASE_NOTES.md  RIN_V0_3_RELEASE_NOTES.md  RIN_V0_3_SCOPE_GOVERNANCE_AUDIT.md  RIN_V0_4_MEMORY_GOVERNANCE_POLICY.md  RIN_V0_4_RELEASE_NOTES.md  RIN_V0_5_RELEASE_NOTES.md  RIN_V0_5_TOOL_MCP_POLICY.md  RIN_V0_6_RELEASE_NOTES.md  RIN_V0_6_TASK_AUTONOMY_POLICY.md  RIN_V0_7_DEVICE_SYNC_POLICY.md  RIN_V0_7_RELEASE_NOTES.md  (+25 more)
python/: README.md  pyproject.toml
python/scripts/: check_coverage_thresholds.py
python/src/rin/: __init__.py  api_contract.py  contracts.py  cutover.py  migration_dry_run.py  preview.py  sandbox.py  shadow.py  version.py
python/src/rin/api/: __init__.py
python/src/rin/body/: __init__.py  state.py
python/src/rin/cli/: __init__.py  _runner.py  api_chat_smoke.py  api_contract_check.py  candidate_check.py  check.py  copy_data_shadow_report.py  local_chat_smoke.py  parity_check.py  preview_local_model_smoke.py  preview_server.py  preview_smoke.py  production_check.py  production_migration_dry_run.py  production_server.py  profile_report.py  profile_validate.py  readiness.py  real_data_backup.py  real_data_migration_apply.py  real_data_migration_dry_run.py  real_data_preflight.py  rollback_rehearsal.py  sandbox_init.py  sandbox_reset_dry_run.py  sandbox_server.py  sandbox_smoke.py  storage_report.py
python/src/rin/config/: __init__.py  chat_provider.py
python/src/rin/context/: __init__.py  v2.py
python/src/rin/conversation/: __init__.py  runtime.py
python/src/rin/database/: __init__.py  readonly.py  writes.py
python/src/rin/diagnostics/: __init__.py  readiness.py  runtime_trace.py  safety.py
python/src/rin/memory/: __init__.py  v2.py
python/src/rin/model/: __init__.py  api_chat_smoke.py  errors.py  local_chat_smoke.py  ollama.py  openai_compatible.py  sanitizer.py  usage.py
python/src/rin/profiles/: __init__.py  readonly.py
python/src/rin/server/: __init__.py  api.py
python/src/rin/server/static/: console-v2.css  console-v2.js  console.css  console.js
python/src/rin/server/templates/: console-v2.html  console.html
python/src/rin/storage/: __init__.py  layout.py
python/tests/: README.md
python/tests/e2e/: test_full_conversation_flow.py
python/tests/parity/: test_foundation_parity.py
python/tests/perf/: test_regression_benchmarks.py
python/tests/unit/: test_api_contract.py  test_body.py  test_candidate_validation.py  test_context_v2_algorithms.py  test_contracts.py  test_conversation_runtime.py  test_cutover_gate.py  test_database_readonly.py  test_database_writes_temp_only.py  test_fastapi_compatibility.py  test_foundation_import.py  test_memory_v2_algorithms.py  test_migration_dry_run.py  test_ollama_adapter.py  test_openai_compatible_adapter.py  test_preview.py  test_readiness.py  test_runtime_trace.py  test_safety.py  test_sandbox.py  test_shadow_validation.py  test_storage_profiles_readonly.py
(+345 files in other folders)
