[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rin-core"
version = "0.0.0"
description = "Python candidate core for the local-first RIN personal agent system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
rin-python-check = "rin.cli.check:main"
rin-python-parity-check = "rin.cli.parity_check:main"
rin-python-readiness = "rin.cli.readiness:main"
rin-python-candidate-check = "rin.cli.candidate_check:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["rin"]
