[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rin-core"
version = "0.0.0"
description = "Python candidate core for the local-first RIN personal agent system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.8",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
rin-python-check = "rin.cli.check:main"
rin-python-parity-check = "rin.cli.parity_check:main"
rin-python-readiness = "rin.cli.readiness:main"
rin-python-candidate-check = "rin.cli.candidate_check:main"
rin-python-storage-report = "rin.cli.storage_report:main"
rin-python-profile-validate = "rin.cli.profile_validate:main"
rin-python-profile-report = "rin.cli.profile_report:main"
rin-python-local-chat-smoke = "rin.cli.local_chat_smoke:main"
rin-python-preview-server = "rin.cli.preview_server:main"
rin-python-preview-smoke = "rin.cli.preview_smoke:main"
rin-python-preview-local-model-smoke = "rin.cli.preview_local_model_smoke:main"
rin-python-sandbox-init = "rin.cli.sandbox_init:main"
rin-python-sandbox-server = "rin.cli.sandbox_server:main"
rin-python-sandbox-smoke = "rin.cli.sandbox_smoke:main"
rin-python-sandbox-reset-dry-run = "rin.cli.sandbox_reset_dry_run:main"
rin-python-production-server = "rin.cli.production_server:main"
rin-python-production-check = "rin.cli.production_check:main"
rin-python-real-data-preflight = "rin.cli.real_data_preflight:main"
rin-python-real-data-backup = "rin.cli.real_data_backup:main"
rin-python-real-data-migration-dry-run = "rin.cli.real_data_migration_dry_run:main"
rin-python-real-data-migration-apply = "rin.cli.real_data_migration_apply:main"
rin-python-copy-data-shadow-report = "rin.cli.copy_data_shadow_report:main"
rin-python-production-migration-dry-run = "rin.cli.production_migration_dry_run:main"
rin-python-rollback-rehearsal = "rin.cli.rollback_rehearsal:main"
rin-python-api-contract-check = "rin.cli.api_contract_check:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rin"]

[tool.hatch.build.targets.wheel.force-include]
"src/rin/server/templates" = "rin/server/templates"
"src/rin/server/static" = "rin/server/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["rin"]
